Hot class reload tool added